--- a/.github/workflows/merge_adjust_transcribe.yml
+++ b/.github/workflows/merge_adjust_transcribe.yml
@@ -110,7 +110,7 @@ jobs:
           python scripts/upload_results_to_drive.py audio_adjusted.mp3 transcript.srt
       - name: 📣 Notify Telegram
         run: |
-          MESSAGE="🎉 Video #${{ github.event.inputs.video_number }} done: Adjusted speed & transcript completed!\n🔗 Drive: ${{ github.event.inputs.drive_url }}" \
+          MESSAGE="🎉 Video #${{ github.event.inputs.video_number }} done: Adjusted speed & transcript completed!\n📂 Google Drive folder: ${{ github.event.inputs.folder_url }}" \
           node scripts/send_telegram_message.js
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
