--- a/.github/workflows/test-telegram.yml
+++ b/.github/workflows/test-telegram.yml
@@ -27,9 +27,12 @@ jobs:
 
       - name: 📣 Send Telegram notification
         run: |
-          export MESSAGE="🎉 Video #${{ github.event.inputs.video_number }} done!\n📂 ${{ github.event.inputs.folder_url }}"
+          MESSAGE="🎉 Video #${{ github.event.inputs.video_number }} done!
+          📂 ${{ github.event.inputs.folder_url }}"
+          export MESSAGE
           node scripts/send_telegram_message.js
-        env:
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+    env:
+      TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+      TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+
 
