--- a/.github/workflows/process-from-drive.yml
+++ b/.github/workflows/process-from-drive.yml
@@ -89,7 +89,16 @@ jobs:
       
       - name: 🧾 Rename slides-timing.json to timings.json
         run: mv slides-timing.json timings.json
-        
+      
+      - name: 🛠 Install LibreOffice (for PPTX to PDF)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libreoffice
+      
+      - name: 📜 Generate PPTX from timing
+        env:
+          CONFIG_KEY: ${{ github.event.inputs.config_key }}
+        run: node scripts/gen_slides.js
       - name: 📜 Generate PPTX from timing
         env:
           CONFIG_KEY: ${{ github.event.inputs.config_key }}
