upload from gg drive to youtube

--- a/.github/workflows/process-from-drive.yml
+++ b/.github/workflows/process-from-drive.yml
@@ -164,20 +164,11 @@ jobs:
           YT_CLIENT_SECRET: ${{ secrets.YT_CLIENT_SECRET }}
         run: python scripts/upload_youtube.py
 
-      - name: "📩 Notify: Upload to YouTube done"
-        if: ${{ github.event.inputs.upload_to_youtube == 'true' && github.event.inputs.build_video == 'true' }}
-        run: |
-          export MESSAGE="🚀 Video #${{ github.event.inputs.video_number }}: Uploaded to YouTube!"
-          node scripts/send_telegram_message.js
-        env:
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-
       - name: "📩 Send Telegram message with YouTube link (if available)"
         if: ${{ github.event.inputs.upload_to_youtube == 'true' && github.event.inputs.build_video == 'true' }}
         run: |
           YT_LINK=$(cat yt_link.txt)
-          export MESSAGE="🎉 Video #${{ github.event.inputs.video_number }} đã được upload!\n📺 Xem tại: $YT_LINK"
+          export MESSAGE="🎉 Video #${{ github.event.inputs.video_number }} đã được upload! 📺 Xem tại: $YT_LINK"
           node scripts/send_telegram_message.js
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
