--- a/.github/workflows/process-from-drive.yml
+++ b/.github/workflows/process-from-drive.yml
@@ -162,7 +162,7 @@ jobs:
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
 
       - name: 🚀 Upload to YouTube (if enabled)
-        if: ${{ github.event.inputs.upload_to_youtube == 'true' && github.event.inputs.build_video == 'true' }}
+        if: ${{ github.event.inputs.upload_to_youtube == 'true' }}
         env:
           YT_REFRESH_TOKEN: ${{ secrets.YT_REFRESH_TOKEN }}
           YT_CLIENT_ID: ${{ secrets.YT_CLIENT_ID }}
@@ -170,7 +170,7 @@ jobs:
         run: python scripts/upload_youtube.py
 
       - name: "📩 Send Telegram message with YouTube link (if available)"
-        if: ${{ github.event.inputs.upload_to_youtube == 'true' && github.event.inputs.build_video == 'true' }}
+        if: ${{ github.event.inputs.upload_to_youtube == 'true' }}
         run: |
           YT_LINK=$(cat yt_link.txt)
           export MESSAGE="🎉 Video #${{ github.event.inputs.video_number }} đã được upload! 📺 Xem tại: $YT_LINK"
