--- a/.github/workflows/full_auto_process_video.yml
+++ b/.github/workflows/full_auto_process_video.yml
@@ -54,10 +54,14 @@ jobs:
       resolution: ${{ github.event.inputs.resolution }}
       config_key: ${{ github.event.inputs.config_key }}
       upload_to_youtube: ${{ github.event.inputs.upload_to_youtube }}
+      maxChar: ${{ github.event.inputs.maxChar }}
+      minChar: ${{ github.event.inputs.minChar }}
+      matchThreshold: ${{ github.event.inputs.matchThreshold }}
+      maxOffset: ${{ github.event.inputs.maxOffset }}
     secrets:
       YT_CLIENT_ID: ${{ secrets.YT_CLIENT_ID }}
       YT_CLIENT_SECRET: ${{ secrets.YT_CLIENT_SECRET }}
       YT_REFRESH_TOKEN: ${{ secrets.YT_REFRESH_TOKEN }}
       TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
       TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-
+  
