--- a/.github/workflows/full_auto_process_video.yml
+++ b/.github/workflows/full_auto_process_video.yml
@@ -14,30 +14,23 @@ on:
         default: 'small'
       speed:
         default: '0.8'
-      max_words_per_line:
-        default: '1'
-      language:
-        default: 'en'
-      dpi:
-        default: '192'
-      resolution:
-        default: '1080p'
-      config_key:
-        default: 'onyxShadowingEnglish'
-      upload_to_youtube:
-        default: 'false'
       maxChar:
-        description: 'Maximum characters per slide'
-        default: '200'
+        description: "Số ký tự tối đa mỗi slide"
+        type: number
+        default: 200
       minChar:
-        description: 'Minimum characters per slide'
-        default: '100'
+        description: "Số ký tự tối thiểu mỗi slide"
+        type: number
+        default: 100
       matchThreshold:
-        description: 'Threshold for sentence matching'
-        default: '90'
+        description: "Tỷ lệ khớp tối thiểu (%)"
+        type: number
+        default: 90
       maxOffset:
-        description: 'Max word offset for alignment'
-        default: '3'
+        description: "Số từ lệch tối đa khi so khớp"
+        type: number
+        default: 3
+
 
 
 jobs:
