--- a/.github/workflows/full_auto_process_video.yml
+++ b/.github/workflows/full_auto_process_video.yml
@@ -26,22 +26,46 @@ on:
         description: 'Ngôn ngữ của file audio (en, vi, es, etc.)'
         required: true
         default: 'en'
+
+      dpi:
+        description: "DPI for slide PNGs (96=480p, 128=720p, 192=1080p)"
+        type: string
+        default: "192"
+
+      resolution:
+        description: "Video resolution"
+        type: string
+        default: "480p"
+
+      config_key:
+        description: "Slide config key"
+        type: string
+        default: "onyxShadowingEnglish"
+
+      upload_to_youtube:
+        description: "Upload video to YouTube?"
+        type: string
+        default: "false"
+
       maxChar:
         description: "Số ký tự tối đa mỗi slide"
-        type: number
-        default: 200
+        type: string
+        default: "200"
+
       minChar:
         description: "Số ký tự tối thiểu mỗi slide"
-        type: number
-        default: 100
+        type: string
+        default: "100"
+
       matchThreshold:
         description: "Tỷ lệ khớp tối thiểu (%)"
-        type: number
-        default: 90
+        type: string
+        default: "90"
+
       maxOffset:
         description: "Số từ lệch tối đa khi so khớp"
-        type: number
-        default: 3
+        type: string
+        default: "3"
 
 
 
